fix sibebar spacing with logo

--- a/src/furo/assets/styles/extensions/_farama.sass
+++ b/src/furo/assets/styles/extensions/_farama.sass
@@ -117,6 +117,7 @@ html:has(.farama-header-menu.active)
 body
     --farama-header-height: 52px
     --farama-header-logo-margin: 10px
+    --farama-sidebar-logo-margin: 2px 10px
 
 .farama-header
     position: absolute
@@ -348,13 +349,13 @@ body
     align-items: center
     padding-right: 4px
     min-height: calc(52px - var(--sidebar-search-space-above))
-    margin-top: 0.8rem
+    margin-top: 0.6rem
     margin-left: var(--sidebar-search-space-lateral)
     text-decoration: none
 
     img
         height: calc(var(--farama-header-height) - 20px)
-        margin: var(--farama-header-logo-margin)
+        margin: var(--farama-sidebar-logo-margin)
     span
         color: var(--color-foreground-primary)
         &:hover
